<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">

   <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:padding="30dp"
            android:background="@drawable/gradient" >

            <!-- Logo Start -->
            <ImageView
                android:layout_width="156dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="0.02"
                android:padding="20dp"
                android:src="@drawable/logo"
                
                 />
            <!-- Logo Ends -->
           
           <!-- Login For Starts -->
            <EditText
                android:id="@+id/et_loginusername"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/et_login_username_text"
                android:textColorHint="@color/common_hint_text_color"
                android:padding="10dp"/>
            <EditText
                android:id="@+id/et_loginpassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/et_password_text"
                android:inputType="textPassword"
                android:textColorHint="@color/common_hint_text_color"
                android:padding="10dp"/>
      
            <Button
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/btn_login_text"
                android:textColor="@color/common_text_color" />

            <Button
                android:id="@+id/btn_forgotpassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/btn_forgotPassword_text"
                android:textColor="@color/common_text_color" />
      
            <!-- Nested layout for horizontal view of End of Nested layout for horizontal view of contact us and about us text view text view -->

            <LinearLayout
                android:layout_width="307dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.00"
                android:orientation="horizontal"
                android:padding="30dp"
                android:weightSum="3" >

                <TextView
                    android:id="@+id/tv_aboutus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:padding="2dp"
                    android:text="@string/tv_aboutus_text"
                    android:textColor="@color/common_text_color"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_contactus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:text="@string/tv_contactus_text" 
                    android:autoLink="web"
                    android:textColor="@color/common_text_color"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:padding="2dp"
                    />
                   <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:text="@string/tv_register_text" 
                    android:autoLink="web"
                    android:textColor="@color/common_text_color"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:padding="2dp"
                    />
            </LinearLayout>
         <!-- End of Nested layout for horizontal view of contact us and about us text view -->
               
        </LinearLayout>

        <!-- Login Form Ends -->
        
        
        <!-- Footer Start -->
                  <!-- Right now There is no header Add Mob may be placed here-->
        <!-- Footer Ends -->

</ScrollView>